# ShootAlienSpaceShipsInSpace

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: design.md  progression.md
scripts/: build.sh  render_particles_labels.py  render_ships_labels.py  run.sh
src/: alerts.cpp  app.cpp  app.hpp  assets.cpp  assets.hpp  audio.cpp  audio.hpp  battle_render.cpp  battle_render.hpp  battle_types.hpp  camera.cpp  config.cpp  config.hpp  crates.cpp  crates.hpp  damage.cpp  damage.hpp  enemy_behavior.cpp  enemy_behavior.hpp  entity.hpp  globals.hpp  graphics.cpp  graphics.hpp  guns.hpp  input.cpp  input.hpp  input_debounce.cpp  input_defs.hpp  level_data.cpp  level_data.hpp  level_flow.cpp  level_flow.hpp  luamgr.hpp  luamgr_query.cpp  main.cpp  math.hpp  mods.cpp  mods.hpp  mods_helpers.cpp  pickup_defs.cpp  (+21 more)
src/lua/: internal_state.hpp  lua_defs.hpp  lua_helpers.cpp  lua_helpers.hpp  runtime.cpp  version.hpp
src/lua/api/: player.cpp  world.cpp
src/lua/hooks/: ammo.cpp  crates.cpp  entities.cpp  global.cpp  guns.cpp  items.cpp  projectiles.cpp
src/lua/registry/: ammo.cpp  crates.cpp  entities.cpp  guns.cpp  items.cpp  projectiles.cpp
src/menu/: menu.cpp  menu.hpp
src/port/: app.cpp  app.hpp  assets.cpp  assets.hpp  gameplay.cpp  gameplay.hpp  math.hpp
src/step/: mode_game_over.cpp  mode_next_stage.cpp  mode_playing.cpp  mode_score_review.cpp  mode_title.cpp
